package com.g4.odontohub.prontuarioclinico.domain.model;

public record AnamneseId(Long id) {}